Added some jQuery

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Untitled</title>
 </head>
 <body>
+
+	<p id="welcome-message">Welcome to Boulder!</p>
 	
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="main.js"></script>
